# whosaid-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yaml
entity/: Cargo.toml
entity/src/: channel.rs  guild.rs  message.rs  mod.rs  prelude.rs  user.rs  user_emoji.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240205_000001_create_user_table.rs  m20240205_000002_create_guild_table.rs  m20240205_000003_create_channel_table.rs  m20240205_000004_create_message_table.rs  m20240407_000001_create_user_emoji_table.rs  m20250411_000001_make_msg_author_nilable.rs
whosaid/: Cargo.toml
whosaid/src/: main.rs  utils.rs
whosaid/src/commands/: emoji.rs  mod.rs  whosaid.rs
whosaid/src/database/: channel.rs  error.rs  guild.rs  messages.rs  mod.rs  user.rs
whosaid/src/game/: mod.rs
whosaid/src/scrapper/: mod.rs
