[package]
name = "whosaid-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.12.4", features = ["default", "collector"] }
async-trait = "0.1.88"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres"] }
anyhow = "1.0.79"
itertools = "0.14.0"
thiserror = "2.0.12"
sea-query = "0.32.3"
sea-orm = { version = "1.1.8", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono"] }
sea-orm-cli = { version = "1.1.8", features = ["runtime-tokio-rustls"] }
log = "0.4.27"
entity = { path = "../entity" }
migration = { path = "../migration" }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"